[build-system]
requires = ["setuptools>=56", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true

[tool.setuptools_scm]

# Disable plugins as workaround for pytest-dev/pytest#8332
[tool.pytest-enabler.black]

# Disable plugins as workaround for pytest-dev/pytest#8332
[tool.pytest-enabler.mypy]
