[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=3.4.1"]
build-backend = "setuptools.build_meta"

[project]
name = "jaraco.keyring"
authors = [
	{ name = "Jason R. Coombs", email = "jaraco@jaraco.com" },
]
description = "Remote keyring over SSH"
readme = "README.rst"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
	"requests_unixsocket",
	"cherrypy",
	"keyring",
]
dynamic = ["version"]

[project.urls]
Source = "https://github.com/jaraco/jaraco.keyring"

[project.optional-dependencies]
test = [
	# upstream
	"pytest >= 6, != 8.1.*",
	"pytest-checkdocs >= 2.4",
	"pytest-cov",
	"pytest-mypy",
	"pytest-enabler >= 2.2",
	"pytest-ruff >= 0.2.1; sys_platform != 'cygwin'",

	# local
]
doc = [
	# upstream
	"sphinx >= 3.5",
	"jaraco.packaging >= 9.3",
	"rst.linker >= 1.9",
	"furo",
	"sphinx-lint",

	# local
]

[project.entry-points]
"keyring.backends" = {"remote agent" = "jaraco.keyring"}

[tool.setuptools_scm]

# Disable plugins as workaround for pytest-dev/pytest#8332
[tool.pytest-enabler.black]

# Disable plugins as workaround for pytest-dev/pytest#8332
[tool.pytest-enabler.mypy]
